Fixes #34150 -  align secondary tabs in host page
(cherry picked from commit e9e7c4e69ab31f390ad6d34d0571b4847b61e7bf)

--- a/webpack/components/AnsibleHostDetail/AnsibleHostDetail.scss
+++ b/webpack/components/AnsibleHostDetail/AnsibleHostDetail.scss
@@ -4,3 +4,7 @@
   background-color: $pf-color-white;
   padding: 1.8rem;
 }
+
+.ansible-host-details-tabs {
+  margin: 0 24px;
+}
